# pro-stocks

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
backend/: .env.example  Dockerfile  MODULE_CONTRACTS.md  pyproject.toml  render.yaml  requirements.txt  run_server.py  test_api.py  test_multi_source.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py
backend/app/core/: config.py  market_hours.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/schemas/: __init__.py  explanation.py  indicators.py  market.py  risk.py  trade.py
backend/app/services/: __init__.py  base.py
backend/app/services/backtest/: __init__.py  engine.py  strategies.py
backend/app/services/cache/: __init__.py  redis_client.py
backend/app/services/data_ingestion/: __init__.py  angelone_adapter.py  interface.py  mock_data.py  multi_source.py  service.py  stock_list.py  upstox_adapter.py  yahoo_adapter.py
backend/app/services/indicators/: __init__.py  calculations.py  interface.py  service.py
backend/app/services/llm/: __init__.py  client.py  explanation.py  interface.py  prompts.py  reasoning.py
backend/app/services/news/: __init__.py  service.py
backend/app/services/risk/: __init__.py  interface.py  service.py
backend/app/services/scanner/: __init__.py  patterns.py  scanner.py
backend/app/services/strategy/: __init__.py  interface.py  service.py
backend/app/services/websocket/: __init__.py  manager.py
src/app/: globals.css  page.tsx  (+1 more)
(+28 files in other folders)
